// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be disabled 1`] = `
<button
  className="Button__StyledButton-sc-rouxfp-0 dFIsDi"
  color="primary"
  disabled={true}
  onClick={[Function]}
  size="md"
  type="default"
>
  disabled button
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  className="Button__StyledButton-sc-rouxfp-0 kzTaGv"
  color="primary"
  disabled={false}
  onClick={[Function]}
  size="md"
  type="default"
>
  Test
</button>
`;

exports[`Button takes props 1`] = `
<button
  className="Button__StyledButton-sc-rouxfp-0 juTlWk"
  color="secondary"
  disabled={false}
  onClick={[Function]}
  size="lg"
  type="default"
>
  Secondary Button
</button>
`;
